--- a/package.json
+++ b/package.json
@@ -15,10 +15,24 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.5",
+    "date-and-time": "^0.6.3",
     "express": "^4.16.4",
+    "express-jwt": "^5.3.1",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
+    "http-status-codes": "^1.3.0",
+    "joi": "^14.3.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.0",
     "morgan": "^1.9.1",
-    "passport": "^0.4.0"
+    "multer": "^1.4.1",
+    "node-datetime": "^2.1.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
